# SillyMic

./: .gitignore  README.md
.github/workflows/: ios-unsigned.yml
backend/: Cargo.toml
backend/src/: audio.rs  cli.rs  main.rs  server.rs  session.rs  signal.rs  webrtc_engine.rs
mobile/: App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/sillymicnative/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/SillyMicNative/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
mobile/ios/SillyMicNative.xcodeproj/: project.pbxproj
mobile/ios/SillyMicNative.xcodeproj/xcshareddata/xcschemes/: SillyMicNative.xcscheme
mobile/ios/SillyMicNativeTests/: SillyMicNativeTests.m
mobile/ios_backup_snippet/: Info.plist.snippet.xml
mobile/src/: bridgeClient.ts  types.ts
